force-app/main/default/objects/Purchase_Line_Item__c/Purchase_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Line Item</label>
    <nameField>
        <displayFormat>PLI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>