force-app/main/default/objects/Purchase_Line_Item__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Picklist</valueSetName>
    </valueSet>
</CustomField>