force-app/main/default/objects/Purchase_Line_Item__c/fields/Landing_Cost_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Landing_Cost_Per_Kg__c</fullName>
    <description>Cost per KG for this specific brand. Required ✓.</description>
    <label>Landing Cost Per Kg</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>