force-app/main/default/objects/Purchase_Line_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <formula>Quantity__c * Landing_Cost_Per_Kg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>