force-app/main/default/objects/Purchase_Line_Item__c/fields/Packet_Count__c.field-meta.xml
<CustomField>
    <fullName>Packet_Count__c</fullName>
    <formula>ROUND(
  CASE(TEXT(Packet_Type__c),
    &quot;100g&quot;, Quantity__c * 10,
    &quot;250g&quot;, Quantity__c * 4,
    0),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packet Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>