force-app/main/default/objects/Purchase_Line_Item__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <description>MUST be Master-Detail — not Lookup. This is what allows Roll-Up Summary on the parent Purchase. Create this field first. Related To: Purchase. Label: &quot;Purchase&quot;.</description>
    <label>Purchase</label>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Purchase Line Items</relationshipLabel>
    <relationshipName>Purchase_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>