force-app/main/default/objects/Purchase_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>KGs of this brand in this order. Required ✓. Min value = 0.</description>
    <label>Quantity (Kg)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>