force-app/main/default/objects/Purchase_Line_Item__c/fields/Shrinkage__c.field-meta.xml
<CustomField>
    <fullName>Shrinkage__c</fullName>
    <description>Weight loss for this brand after receiving. Default = 0. Manually entered.</description>
    <label>Shrinkage (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>